--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T4</title>
+    <title>T5</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <h2>
-            WebStudio
+            <span class="logitech">
+                Web
+            </span>
+            <span class="lolohacer">
+                Studio
+            </span>
         </h2>
         <ul>
-            <li> <a href="stydio.html"> Студия </a> </li>
-            <li> <a href="portfolio.html">Портфолио</a> </li>
-            <li> <a href="kontakti.html"> Kонтакти </a> </li>
+            <li> <a href="stydio.html" class="folout"> Студия </a> </li>
+            <li> <a href="portfolio.html" class="folout">Портфолио</a> </li>
+            <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
         </ul>
         <div class="contact-info">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -22,12 +28,12 @@
     </header>
     <main>
         <!-- хз №1 -->
-        <section>
+        <div class="lolokrya">
             <h1>
                 ЕФЕКТИВНI РIШЕННЯ ДЛЯ ВАШОГО БIЗНЕСУ
             </h1>
-            <button type="button"> Замовити послугу </button>
-        </section>
+            <button type="button" id="nya"> Замовити послугу </button>
+        </div>
         <!-- хз №2 -->
         <section>
             <ul>
@@ -103,15 +109,13 @@
      по метки когда кончается 1 из тем типо того)))) -->
     <footer>
         <div class="footer-content">
-            <div class="logo">
-                <span> Web </span>
-                <span> Studio </span>
-            </div>
+                <span class="logitich"> Web </span>
+                <span class="lolohaker"> Studio </span>
             <address>
                 м. Київ, пр-т Лесі Українки, 26
             </address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <span>+38 096 111 11 11</span>
+                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                 <span>+38 096 111 11 11</span>
         </div>
     </footer>
 </body>
