--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 <body>
     <header>
         <h2>
-            <span class="logitech">
-                Web
-            </span>
-            <span class="lolohacer">
-                Studio
-            </span>
+        <a href="./index.html" class="logitech"> 
+             Web
+        </a>
+        <a href="./index.html" class="lolohacer">Studio</a>
         </h2>
         <ul>
             <li> <a href="stydio.html" class="folout"> Студия </a> </li>
@@ -22,18 +20,20 @@
             <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
         </ul>
         <div class="contact-info">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <span>+38 096 111 11 11</span>
+            <ul>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+            </ul>
         </div>
     </header>
     <main>
         <!-- хз №1 -->
-        <div class="lolokrya">
+        <section class="lolokrya">
             <h1>
                 ЕФЕКТИВНI РIШЕННЯ ДЛЯ ВАШОГО БIЗНЕСУ
             </h1>
             <button type="button" id="nya"> Замовити послугу </button>
-        </div>
+        </so>
         <!-- хз №2 -->
         <section>
             <ul>
@@ -97,26 +97,42 @@
             <h2>
                 Наша Команда
             </h2>
-            <ol>
-                <li> <img src="./images.krakva/egorik.png" alt=" Iгор Дем'яненко "> <p> Product Designer </p> </li>
-                <li> <img src="./images.krakva/olga.png" alt=" Ольга Рэпiна "> <p> Front-end Developer </p> </li>
-                <li> <img src="./images.krakva/kolya.png" alt=" Микола Тарасов "> <p> Marketing </p></li>
-                <li> <img src="./images.krakva/miha.png" alt=" Михайло Эрмаков "> <p> UI Designer </p> </li>
-            </ol>
+            <ul>
+                <li>
+                 <img src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
+                 <p> Iгор Дем'яненко </p> 
+                 <p> Product Designer </p> 
+                </li>
+                <li>
+                 <img src="./images.krakva/olga.png" alt="Ольга Рэпiна">
+                 <p> Ольга Рэпiна </p>
+                 <p> Front-end Developer </p> 
+                </li>
+                <li> <img src="./images.krakva/mikolya.png" alt="Микола Тарасов">
+                 <p> Микола Тарасов </p>
+                 <p> Marketing </p>
+                </li>
+                <li> <img src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
+                 <p> Михайло Эрмаков </p>
+                 <p> UI Designer </p>
+                </li>
+            </ul>
         </section>
     </main>
     <!-- хз №5 чтоли насамом деле просто 
      по метки когда кончается 1 из тем типо того)))) -->
     <footer>
-        <div class="footer-content">
-                <span class="logitich"> Web </span>
-                <span class="lolohaker"> Studio </span>
-            <address>
-                м. Київ, пр-т Лесі Українки, 26
-            </address>
-                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                 <span>+38 096 111 11 11</span>
-        </div>
+        <section>
+            <a href="./index.html" class="logitich"> 
+                 Web
+            </a>
+            <a href="./index.html" class="lolohaker">Studio</a>
+        </section>
+        <ul>
+         <li> <address>м. Київ, пр-т Лесі Українки, 26</address> </li>
+         <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+         <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+        </ul>
     </footer>
 </body>
 </html>
