--- a/kontakti.html
+++ b/kontakti.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Контакти </title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <h1>
-            WebStudio
-        </h1>
-
+        <h2>
+            <a href="./index.html" class="logitech"> 
+                 Web
+            </a>
+            <a href="./index.html" class="lolohaker">Studio</a>
+        </h2>
             <ul>
-                <li> <a href="stydio.html"> Студия </a> </li>
-                <li> <a href="portfolio.html">Портфолио</a> </li>
-                <li> <a href="index.html"> Головна </a> </li>
+                <li> <a href="stydio.html" class="folout"> Студия </a> </li>
+                <li> <a href="portfolio.html" class="folout">Портфолио</a> </li>
+                <li> <a href="index.html" class="folout"> Головна </a> </li>
             </ul>
             <div class="contact-info">
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
