--- a/portfolio.html
+++ b/portfolio.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Портфолио </title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <h2>
-            WebStudio
+            <a href="./index.html" class="logitech"> 
+                 Web
+            </a>
+            <a href="./index.html" class="lolohaker">Studio</a>
         </h2>
-        <ul>
-            <li> <a href="stydio.html"> Студия </a> </li>
-            <li> <a href="index.html">Головна</a> </li>
-            <li> <a href="kontakti.html"> Kонтакти </a> </li>
+        <ul> 
+            <li> <a href="stydio.html" class="folout" > Студия </a> </li>
+            <li> <a href="index.html" class="folout">Головна</a> </li>
+            <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
         </ul>
         <div class="contact-info">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
