--- a/T7/index.html
+++ b/T7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T5</title>
+    <title>T7</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -12,7 +12,9 @@
         <a href="./index.html" class="logitech"> 
              Web
         </a>
-        <a href="./index.html" class="lolohacer">Studio</a>
+        <a href="./index.html" class="lolohacer">
+             Studio
+        </a>
         </h2>
         <ul>
             <li> <a href="stydio.html" class="folout"> Студия </a> </li>
@@ -21,8 +23,8 @@
         </ul>
         <div class="contact-info">
             <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+             <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
         </div>
     </header>
@@ -32,8 +34,9 @@
             <h1>
                 ЕФЕКТИВНI РIШЕННЯ ДЛЯ ВАШОГО БIЗНЕСУ
             </h1>
-            <button type="button" id="nya"> Замовити послугу </button>
-        </so>
+            <button type="button" id="nya">
+                <a href="./pay.html">Замовити послугу</a></button>
+        </section>
         <!-- хз №2 -->
         <section>
             <ul>
