--- a/T7/kontakti.html
+++ b/T7/kontakti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Студия </title>
+    <title> Контакти </title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -12,12 +12,14 @@
             <a href="./index.html" class="logitech"> 
                  Web
             </a>
-            <a href="./index.html" class="lolohaker">Studio</a>
+            <a href="./index.html" class="lolohacer">
+                 Studio
+            </a>
         </h2>
             <ul>
-                <li> <a href="index.html" class="folout">Головна</a> </li>
-                <li> <a href="portfolio.html" class="folout"> Портфолио</a> </li>
-                <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
+                <li> <a href="stydio.html" class="folout"> Студия </a> </li>
+                <li> <a href="portfolio.html" class="folout">Портфолио</a> </li>
+                <li> <a href="index.html" class="folout"> Головна </a> </li>
             </ul>
             <div class="contact-info">
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -27,7 +29,7 @@
     <main>
 <h1>
     незнаю що ще добавити типу щоб сайт просто перекидав як треба и все що було  на що клiкати
-</h1> 
+</h1>
     </main>
     <footer>
         <div class="footer-content">
@@ -42,5 +44,6 @@
             <span>+38 096 111 11 11</span>
         </div>
     </footer>
+
 </body>
 </html>
