--- a/T7/portfolio.html
+++ b/T7/portfolio.html
@@ -12,7 +12,9 @@
             <a href="./index.html" class="logitech"> 
                  Web
             </a>
-            <a href="./index.html" class="lolohaker">Studio</a>
+            <a href="./index.html" class="lolohaker">
+                 Studio
+            </a>
         </h2>
         <ul> 
             <li> <a href="stydio.html" class="folout" > Студия </a> </li>
