--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T7</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
-        <h2>
-        <a href="./index.html" class="logitech"> 
-             Web
-        </a>
-        <a href="./index.html" class="lolohacer">
-             Studio
-        </a>
-        </h2>
-        <ul>
-            <li> <a href="stydio.html" class="folout"> Студия </a> </li>
-            <li> <a href="portfolio.html" class="folout">Портфолио</a> </li>
-            <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
-        </ul>
-        <div class="contact-info">
+        <a href="./index.html">WebStudio</a>
+        <nav>
             <ul>
-             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-             <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                <li> <a href="stydio.html" class="folout"> Студия </a> </li>
+                <li> <a href="portfolio.html" class="folout">Портфолио</a> </li>
+                <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
             </ul>
-        </div>
+        </nav>
+        <ul>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+        </ul>
     </header>
     <main>
         <!-- хз №1 -->
@@ -46,16 +41,16 @@
                     </h3>
                     <p>
                         Ідейні міркування,
-                         і навіть початок повсякденної
-                          роботи з формування позиції.
+                        і навіть початок повсякденної
+                        роботи з формування позиції.
                     </p>
                 </li>
                 <li>
                     <h3>ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
-                        Завдання організації, 
+                        Завдання організації,
                         особливо рамки і місце
-                         навчання кадрів тягне у себе.
+                        навчання кадрів тягне у себе.
                     </p>
                 </li>
                 <li>
@@ -64,7 +59,7 @@
                     </h3>
                     <p>
                         Так само консультація з широким
-                         активом значною мірою зумовлює.
+                        активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
@@ -73,7 +68,7 @@
                     </h3>
                     <p>
                         Значимість цих проблем настільки
-                         очевидна, що реалізація планових завдань.
+                        очевидна, що реалізація планових завдань.
                     </p>
                 </li>
             </ul>
@@ -102,22 +97,22 @@
             </h2>
             <ul>
                 <li>
-                 <img src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
-                 <p> Iгор Дем'яненко </p> 
-                 <p> Product Designer </p> 
+                    <img src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
+                    <h3> Iгор Дем'яненко </h3>
+                    <p> Product Designer </p>
                 </li>
                 <li>
-                 <img src="./images.krakva/olga.png" alt="Ольга Рэпiна">
-                 <p> Ольга Рэпiна </p>
-                 <p> Front-end Developer </p> 
+                    <img src="./images.krakva/olga.png" alt="Ольга Рэпiна">
+                    <h3> Ольга Рэпiна </h3>
+                    <p> Front-end Developer </p>
                 </li>
                 <li> <img src="./images.krakva/mikolya.png" alt="Микола Тарасов">
-                 <p> Микола Тарасов </p>
-                 <p> Marketing </p>
+                    <h3> Микола Тарасов </h3>
+                    <p> Marketing </p>
                 </li>
                 <li> <img src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
-                 <p> Михайло Эрмаков </p>
-                 <p> UI Designer </p>
+                    <h3> Михайло Эрмаков </h3>
+                    <p> UI Designer </p>
                 </li>
             </ul>
         </section>
@@ -125,17 +120,19 @@
     <!-- хз №5 чтоли насамом деле просто 
      по метки когда кончается 1 из тем типо того)))) -->
     <footer>
-        <section>
-            <a href="./index.html" class="logitich"> 
-                 Web
-            </a>
-            <a href="./index.html" class="lolohaker">Studio</a>
-        </section>
-        <ul>
-         <li> <address>м. Київ, пр-т Лесі Українки, 26</address> </li>
-         <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-         <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
-        </ul>
+        <h3>
+            <a href="./index.html" class="logitich">WebStudio</a>
+        </h3>
+        <address>
+            <ul>
+                <li>
+                    <address>м. Київ, пр-т Лесі Українки, 26</address>
+                </li>
+                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+            </ul>
+        </address>
     </footer>
 </body>
+
 </html>
