--- a/index.html
+++ b/index.html
@@ -125,14 +125,11 @@
         </h3>
         <address>
             <ul>
-                <li>
-                    <address>м. Київ, пр-т Лесі Українки, 26</address>
-                </li>
+                <li> <a>м. Київ, пр-т Лесі Українки, 26</a> </li>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
                 <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
             </ul>
         </address>
     </footer>
 </body>
-
 </html>
