--- a/portfolio.html
+++ b/portfolio.html
@@ -54,17 +54,21 @@
     </div>
     </main>
     <footer>
-        <div class="footer-content">
-            <div class="logo">
-                <span> Web </span>
-                <span> Studio </span>
-            </div>
-            <address>
-                м. Київ, пр-т Лесі Українки, 26
-            </address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <span>+38 096 111 11 11</span>
-        </div>
+         <h3>
+             <a href="./index.html" class="logitich">WebStudio</a>
+         </h3>
+         <address>
+             <ul>
+                 <li>
+                     <a>м. Київ, пр-т Лесі Українки, 26</a>
+                 </li>
+                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                 <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+             </ul>
+         </address>
+         <section>
+            
+         </section>
     </footer>
 </body>
 </html>
