--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T7</title>
+    <title>T9</title>
+
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <header>
         <a href="./index.html">WebStudio</a>
@@ -33,12 +33,10 @@
                 <a href="./pay.html">Замовити послугу</a></button>
         </section>
         <!-- хз №2 -->
-        <section>
+        <section class="possibilities">
             <ul>
                 <li>
-                    <h3>
-                        УВАГА ДО ДЕТАЛЕЙ
-                    </h3>
+                    <h3 class="possibilities-h3"> УВАГА ДО ДЕТАЛЕЙ </h3>
                     <p>
                         Ідейні міркування,
                         і навіть початок повсякденної
@@ -46,7 +44,7 @@
                     </p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="possibilities-h3">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації,
                         особливо рамки і місце
@@ -54,18 +52,14 @@
                     </p>
                 </li>
                 <li>
-                    <h3>
-                        ПЛАНУВАННЯ
-                    </h3>
+                    <h3 class="possibilities-h3"> ПЛАНУВАННЯ </h3>
                     <p>
                         Так само консультація з широким
                         активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3>
-                        СУЧАСНІ ТЕХНОЛОГІЇ
-                    </h3>
+                    <h3 class="possibilities-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки
                         очевидна, що реалізація планових завдань.
