--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T9</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -37,30 +38,30 @@
             <ul>
                 <li>
                     <h3 class="possibilities-h3"> УВАГА ДО ДЕТАЛЕЙ </h3>
-                    <p>
+                    <p class="possibilities-p">
                         Ідейні міркування,
                         і навіть початок повсякденної
                         роботи з формування позиції.
                     </p>
                 </li>
-                <li>
+                <li class="possibilities-p">
                     <h3 class="possibilities-h3">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>
+                    <p class="possibilities-p">
                         Завдання організації,
                         особливо рамки і місце
                         навчання кадрів тягне у себе.
                     </p>
                 </li>
-                <li>
+                <li class="possibilities-p">
                     <h3 class="possibilities-h3"> ПЛАНУВАННЯ </h3>
-                    <p>
+                    <p class="possibilities-p">
                         Так само консультація з широким
                         активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li>
+                <li class="possibilities-p">
                     <h3 class="possibilities-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>
+                    <p class="possibilities-p">
                         Значимість цих проблем настільки
                         очевидна, що реалізація планових завдань.
                     </p>
@@ -68,8 +69,8 @@
             </ul>
         </section>
         <!-- хз №3 -->
-        <section>
-            <h2>
+        <section class="work">
+            <h2 class="work-h2">
                 Чим ми займаэмося
             </h2>
             <ul>
@@ -85,28 +86,28 @@
             </ul>
         </section>
         <!-- хз №4 -->
-        <section>
-            <h2>
+        <section class="comandblock">
+            <h2 class="comandblock-h2">
                 Наша Команда
             </h2>
-            <ul>
-                <li>
+            <ul class="comandblock-ul">
+                <li class="comandblock-ul-li">
                     <img src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
                     <h3> Iгор Дем'яненко </h3>
-                    <p> Product Designer </p>
+                    <p class="comandblock-ul-p"> Product Designer </p>
                 </li>
-                <li>
+                <li class="comandblock-ul-li">
                     <img src="./images.krakva/olga.png" alt="Ольга Рэпiна">
                     <h3> Ольга Рэпiна </h3>
-                    <p> Front-end Developer </p>
+                    <p class="comandblock-ul-p"> Front-end Developer </p>
                 </li>
-                <li> <img src="./images.krakva/mikolya.png" alt="Микола Тарасов">
+                <li class="comandblock-ul-li"> <img src="./images.krakva/mikolya.png" alt="Микола Тарасов">
                     <h3> Микола Тарасов </h3>
-                    <p> Marketing </p>
+                    <p class="comandblock-ul-p"> Marketing </p>
                 </li>
-                <li> <img src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
+                <li class="comandblock-ul-li"> <img src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
                     <h3> Михайло Эрмаков </h3>
-                    <p> UI Designer </p>
+                    <p class="comandblock-ul-p"> UI Designer </p>
                 </li>
             </ul>
         </section>
