--- a/portfolio.html
+++ b/portfolio.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Портфолио </title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <h2>
-            <a href="./index.html" class="logitech"> 
-                 Web
-            </a>
-            <a href="./index.html" class="lolohaker">
-                 Studio
-            </a>
-        </h2>
+        <a href="./index.html" class="wep">WebStudio</a>
+      <nav>
         <ul> 
             <li> <a href="stydio.html" class="folout" > Студия </a> </li>
             <li> <a href="index.html" class="folout">Головна</a> </li>
             <li> <a href="kontakti.html" class="folout"> Kонтакти </a> </li>
         </ul>
+      </nav>
         <div class="contact-info">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <span>+38 096 111 11 11</span>
@@ -30,26 +26,26 @@
      <h2>
         Портфолио
      </h2>
-     <div>
+     <div class="buut">
         <ul>
-            <li> <button type="button"> Усi </button> </li>
-            <li> <button type="button"> Веб-Сайти </button> </li>
-            <li> <button type="button"> Додатоки </button> </li>
-            <li> <button type="button"> Дизайн </button> </li>
-            <li> <button type="button"> Маркетинг </button> </li>
+            <li> <button type="button" class="buut-ver"> Усi </button> </li>
+            <li> <button type="button" class="buut-ver"> Веб-Сайти </button> </li>
+            <li> <button type="button" class="buut-ver"> Додатоки </button> </li>
+            <li> <button type="button" class="buut-ver"> Дизайн </button> </li>
+            <li> <button type="button" class="buut-ver"> Маркетинг </button> </li>
         </ul>
      </div>
-    <div>
+    <div class="port">
         <ul>
-            <li> <img src="./images.krakva/moc.png" alt="Техно-Кряк"> <p>Веб-Сайт</p> </li>
-            <li> <img src="./images.krakva/nba.png" alt="NBA"> <p>Дизайн</p> </li>
-            <li> <img src="./images.krakva/seafood.png" alt="Seafood"> <p>Додаток</p> </li>
-            <li> <img src="./images.krakva/prime.png" alt="Prime"> <p>Маркетинг</p> </li>
-            <li> <img src="./images.krakva/boxes.png" alt="Boxes"> <p>Додаток</p> </li>
-            <li> <img src="./images.krakva/mnn.png" alt="Inspiration has no Borders"> <p>Веб-Сайт</p> </li>
-            <li> <img src="./images.krakva/gazeta.png" alt="Limited Edition"> <p>Дизайн</p> </li>
-            <li> <img src="./images.krakva/projectlab.png" alt="LAB"> <p>Маркетинг</p> </li>
-            <li> <img src="./images.krakva/minemoney.png" alt="Growing Business"> <p>Додаток</p> </li>
+            <li> <img src="./images.krakva/moc.png" alt="Техно-Кряк"> <h2 class="port-h2">Техно-Кряк</h2> <p>Веб-Сайт</p> </li>
+            <li> <img src="./images.krakva/nba.png" alt="NBA"> <h2 class="port-h2">NBA</h2> <p>Дизайн</p> </li>
+            <li> <img src="./images.krakva/seafood.png" alt="Seafood"> <h2 class="port-h2">Seafood</h2> <p>Додаток</p> </li>
+            <li> <img src="./images.krakva/prime.png" alt="Prime"> <h2 class="port-h2">Prime</h2> <p>Маркетинг</p> </li>
+            <li> <img src="./images.krakva/boxes.png" alt="Boxes"> <h2 class="port-h2">Boxes</h2> <p>Додаток</p> </li>
+            <li> <img src="./images.krakva/mnn.png" alt="Inspiration has no Borders"> <h2 class="port-h2">Inspiration has no Borders</h2> <p>Веб-Сайт</p> </li>
+            <li> <img src="./images.krakva/gazeta.png" alt="Limited Edition"> <h2 class="port-h2">Limited Edition</h2> <p>Дизайн</p> </li>
+            <li> <img src="./images.krakva/projectlab.png" alt="LAB"> <h2 class="port-h2">LAB</h2> <p>Маркетинг</p> </li>
+            <li> <img src="./images.krakva/minemoney.png" alt="Growing Business"> <h2 class="port-h2">Growing Business</h2> <p>Додаток</p> </li>
         </ul>
     </div>
     </main>
@@ -66,9 +62,6 @@
                  <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
              </ul>
          </address>
-         <section>
-            
-         </section>
     </footer>
 </body>
 </html>
