--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>T9</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="wep">WebStudio</a>
         <nav>
             <ul>
                 <li> <a href="stydio.html" class="folout"> Студия </a> </li>
@@ -31,7 +31,7 @@
                 ЕФЕКТИВНI РIШЕННЯ ДЛЯ ВАШОГО БIЗНЕСУ
             </h1>
             <button type="button" id="nya">
-                <a href="./pay.html">Замовити послугу</a></button>
+                <a href="./pay.html" class="poslyga">Замовити послугу</a></button>
         </section>
         <!-- хз №2 -->
         <section class="possibilities">
