--- a/index.html
+++ b/index.html
@@ -115,14 +115,12 @@
     <!-- хз №5 чтоли насамом деле просто 
      по метки когда кончается 1 из тем типо того)))) -->
     <footer>
-        <h3>
-            <a href="./index.html" class="logitich">WebStudio</a>
-        </h3>
+        <a href="./index.html" class="logitich">WebStudio</a>
         <address>
             <ul>
                 <li> <a>м. Київ, пр-т Лесі Українки, 26</a> </li>
                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+                <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
         </address>
     </footer>
