--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./css/reset.css">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <a href="./index.html" class="wep">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <nav>
             <ul>
                 <li> <a href="stydio.html" class="folout"> Студия </a> </li>
@@ -20,8 +21,8 @@
             </ul>
         </nav>
         <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            <li> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> </li>
+            <li> <a href="tel:+380961111111" class="link">+38 096 111 11 11</a> </li>
         </ul>
     </header>
     <main>
@@ -35,8 +36,8 @@
         </section>
         <!-- хз №2 -->
         <section class="possibilities">
-            <ul>
-                <li>
+            <ul class="possibilities-ul">
+                <li class="possibilities-li">
                     <h3 class="possibilities-h3"> УВАГА ДО ДЕТАЛЕЙ </h3>
                     <p class="possibilities-p">
                         Ідейні міркування,
@@ -44,7 +45,7 @@
                         роботи з формування позиції.
                     </p>
                 </li>
-                <li class="possibilities-p">
+                <li class="possibilities-li">
                     <h3 class="possibilities-h3">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="possibilities-p">
                         Завдання організації,
@@ -52,14 +53,14 @@
                         навчання кадрів тягне у себе.
                     </p>
                 </li>
-                <li class="possibilities-p">
+                <li class="possibilities-li">
                     <h3 class="possibilities-h3"> ПЛАНУВАННЯ </h3>
                     <p class="possibilities-p">
                         Так само консультація з широким
                         активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li class="possibilities-p">
+                <li class="possibilities-li">
                     <h3 class="possibilities-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="possibilities-p">
                         Значимість цих проблем настільки
@@ -73,15 +74,15 @@
             <h2 class="work-h2">
                 Чим ми займаэмося
             </h2>
-            <ul>
+            <ul class="work-list">
                 <li>
-                    <img src="./images.krakva/programming.png" alt="ппрроггрраммуввання">
+                    <img class="work-pic" src="./images.krakva/programming.png" alt="ппрроггрраммуввання">
                 </li>
                 <li>
-                    <img src="./images.krakva/marketing.png" alt="Маркеттинг">
+                    <img class="work-pic" src="./images.krakva/marketing.png" alt="Маркеттинг">
                 </li>
                 <li>
-                    <img src="./images.krakva/paint-diz.png" alt="Дизайн">
+                    <img class="work-pic" src="./images.krakva/paint-diz.png" alt="Дизайн">
                 </li>
             </ul>
         </section>
@@ -92,21 +93,23 @@
             </h2>
             <ul class="comandblock-ul">
                 <li class="comandblock-ul-li">
-                    <img src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
-                    <h3> Iгор Дем'яненко </h3>
+                    <img class="comandblock-pic" src="./images.krakva/egor.png" alt="Iгор Дем'яненко">
+                    <h3 class="comandblock-h3"> Iгор Дем'яненко </h3>
                     <p class="comandblock-ul-p"> Product Designer </p>
                 </li>
                 <li class="comandblock-ul-li">
-                    <img src="./images.krakva/olga.png" alt="Ольга Рэпiна">
-                    <h3> Ольга Рэпiна </h3>
+                    <img class="comandblock-pic" src="./images.krakva/olga.png" alt="Ольга Рэпiна">
+                    <h3 class="comandblock-h3"> Ольга Рэпiна </h3>
                     <p class="comandblock-ul-p"> Front-end Developer </p>
                 </li>
-                <li class="comandblock-ul-li"> <img src="./images.krakva/mikolya.png" alt="Микола Тарасов">
-                    <h3> Микола Тарасов </h3>
+                <li class="comandblock-ul-li"> 
+                    <img class="comandblock-pic" src="./images.krakva/mikolya.png" alt="Микола Тарасов">
+                    <h3 class="comandblock-h3"> Микола Тарасов </h3>
                     <p class="comandblock-ul-p"> Marketing </p>
                 </li>
-                <li class="comandblock-ul-li"> <img src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
-                    <h3> Михайло Эрмаков </h3>
+                <li class="comandblock-ul-li">
+                    <img class="comandblock-pic" src="./images.krakva/mihaial.png" alt="Михайло Эрмаков">
+                    <h3 class="comandblock-h3"> Михайло Эрмаков </h3>
                     <p class="comandblock-ul-p"> UI Designer </p>
                 </li>
             </ul>
@@ -115,14 +118,16 @@
     <!-- хз №5 чтоли насамом деле просто 
      по метки когда кончается 1 из тем типо того)))) -->
     <footer>
-        <a href="./index.html" class="logitich">WebStudio</a>
-        <address>
-            <ul>
-                <li> <a>м. Київ, пр-т Лесі Українки, 26</a> </li>
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+      <div class="foot">
+        <a href="./index.html" class="foot-logitich">WebStudio</a>
+        <address class="foot-adrs">
+            <ul class="foot-ul">
+                <li class="foot-li"> <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a> </li>
+                <li class="foot-li"> <a class="foot-ul-li-a" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li class="foot-li"> <a class="foot-ul-li-a" href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
         </address>
+      </div>
     </footer>
 </body>
 </html>
