--- a/pay.html
+++ b/pay.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pay.iNdert</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <h2>
-            <a href="./index.html" class="logitech"> 
-                 Web
-            </a>
-            <a href="./index.html" class="lolohacer">
-                 Studio
-            </a>
-        </h2>
+        <a href="./index.html" class="logo">Studio</a>
     </header>
     <main>
         <h1>
@@ -42,5 +39,17 @@
             </button>
         </section>
     </main>
+    <footer>
+        <div class="foot">
+          <a href="./index.html" class="foot-logo">WebStudio</a>
+          <address class="foot-adrs">
+              <ul class="foot-ul">
+                  <li class="foot-li"> <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a> </li>
+                  <li class="foot-li"> <a class="foot-ul-li-a" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                  <li class="foot-li"> <a class="foot-ul-li-a" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+              </ul>
+          </address>
+        </div>
+      </footer>
 </body>
 </html>
