--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Портфолио </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <a href="./index.html" class="wep">WebStudio</a>
+        <a href="./index.html" class="logo">Studio</a>
       <nav>
         <ul> 
             <li> <a href="stydio.html" class="folout" > Студия </a> </li>
@@ -50,18 +53,16 @@
     </div>
     </main>
     <footer>
-         <h3>
-             <a href="./index.html" class="logitich">WebStudio</a>
-         </h3>
-         <address>
-             <ul>
-                 <li>
-                     <a>м. Київ, пр-т Лесі Українки, 26</a>
-                 </li>
-                 <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                 <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
-             </ul>
-         </address>
-    </footer>
+        <div class="foot">
+          <a href="./index.html" class="foot-logo">Studio</a>
+          <address class="foot-adrs">
+              <ul class="foot-ul">
+                  <li class="foot-li"> <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a> </li>
+                  <li class="foot-li"> <a class="foot-ul-li-a" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                  <li class="foot-li"> <a class="foot-ul-li-a" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+              </ul>
+          </address>
+        </div>
+      </footer>
 </body>
 </html>
