--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <address class="foot-adrs">
             <ul class="foot-ul">
                 <li class="foot-li"> <a class="foot-ul-li-a">м. Київ, пр-т Лесі Українки, 26</a> </li>
-                <li class="foot-li"> <a class="foot-ul-li-a" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li class="foot-li"> <a class="foot-ul-li-a" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                <li class="foot-li"> <a class="foot-ul-li-aa" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li class="foot-li"> <a class="foot-ul-li-aa" href="tel:+380961111111">+38 096 111 11 11</a> </li>
             </ul>
         </address>
       </div>
