--- a/index.html
+++ b/index.html
@@ -66,32 +66,32 @@
         </div>
       </section>
       <!--  №2 -->
-      <section class="possibilities">
+      <section class="alarm">
         <div class="container">
-          <ul class="possibilities-ul">
-            <li class="possibilities-li">
-              <h3 class="possibilities-h3">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="possibilities-p">
+          <ul class="alarm-list">
+            <li class="alarm-item">
+              <h3 class="alarm-subtle">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="alarm-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="possibilities-li">
-              <h3 class="possibilities-h3">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="possibilities-p">
+            <li class="alarm-item">
+              <h3 class="alarm-subtle">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="alarm-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="possibilities-li">
-              <h3 class="possibilities-h3">ПЛАНУВАННЯ</h3>
-              <p class="possibilities-p">
+            <li class="alarm-item">
+              <h3 class="alarm-subtle">ПЛАНУВАННЯ</h3>
+              <p class="alarm-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="possibilities-li">
-              <h3 class="possibilities-h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="possibilities-p">
+            <li class="alarm-item">
+              <h3 class="alarm-subtle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="alarm-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
